# pathway-sims

./: README.md
NF‑κB pathway sim/: README.md  app.py  requirements.txt
NLRP3 inflammasome activation sim/: README.md  app.py  nlrp3_model.py
Notch pathway sim/: README.md  pyproject.toml
Notch pathway sim/examples/: edges_small.txt
Notch pathway sim/notch/: __init__.py  boolean.py  cli.py  graph.py  math.py  metrics.py  neighbors.py  ode.py  plot.py  streamlit_app.py  types.py
Notch pathway sim/notch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Notch pathway sim/tests/: test_adjacency_runs.py  test_graph.py  test_shapes.py
PI3K;AKT;mTOR-pathway sim/: README.md  app.py  pyproject.toml
PI3K;AKT;mTOR-pathway sim/src/pi3k_akt_mtor/: __init__.py  cli.py  ode.py  outputs.py  params.py  sim.py  variants.py
PI3K;AKT;mTOR-pathway sim/src/pi3k_akt_mtor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
VEGF signaling sim/: README.md  app.py  requirements.txt
ampk-energy-sensing pathway sim/: README.md  app.py  requirements.txt
calcium signaling sim/: README.md  app.py  requirements.txt
chemokine receptor-CXCR:CCR-signaling sim/: app.py  config.yaml  examples.py  readme.md  requirements.txt  run_simulation.py
eph-ephrin signaling sim/: app.py  axon_guidance.py  eph_ephrin_model.py  readme.md  requirements.txt  spatial_model.py
fc receptor-FcγR-signaling in innate cells sim/: app.py  fcgr_models.py  readme.md  requirements.txt  visualization.py
hgf:met signaling sim/: README.md  app.py  requirements.txt
insulin:igf signaling sim/: README.md  app.py  pyproject.toml
insulin:igf signaling sim/insulin_igf/: __init__.py  model.py  network.py
integrin:fak signaling sim/: README.md  pyproject.toml  requirements.txt  streamlit_app.py
integrin:fak signaling sim/src/integrin_fak/: __init__.py  model.py  simulate.py
neurotrophin (ngf:trka) signaling sim/: README.md  app.py  pathway_model.py  requirements.txt  setup.sh  (+1 more)
(+96 files in other folders)
