[project]
name = "notch"
version = "0.1.0"
description = "notch pathway simulation (ode + boolean, multicellular)"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.30",
]

[project.scripts]
notch = "notch.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
