[project]
name = "insulin-igf-sim"
version = "0.1.0"
description = "Interactive insulin/IGF signaling toy model with Streamlit"
requires-python = ">=3.10"

dependencies = [
  "streamlit>=1.36",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "plotly>=5.22",
  "networkx>=3.3",
]

[tool.ruff]
line-length = 100
